tests/fixtures/valid/multi/required_param_import/src/library/main.gcl
// Import a library with a required param, providing the value.
include library.lib(radius: 6371.0 km).{ circumference };
