tests/fixtures/invalid/multi/injectable_index_kind_mismatch/lib.gcl
// lib.gcl -- library with a required named index
pub(bind) index Phase;

param cost: Dimensionless[Phase];
